# TimeTap

./: .gitignore  LICENSE  README.md  build.sh  examples.py  main.py  pyproject.toml
TimeTap/: __init__.py  timeTap.py
src/timetap/: TimeTapHelperClass.py  __init__.py  timeTap.py
